# orchestra-knowledge-capture

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  server.py
api/: routes.py
config/: compile-rules.md  wiki-style.md
ingest/: pdf.py  text.py  url.py
pipeline/: compile.py  seed.py
search/: hybrid.py  query.py
ui/templates/: index.html
